load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "unique_aggregator_test",
    srcs = ["UniqueAggregatorTest.java"],
    test_class = "org.wfanet.anysketch.aggregators.UniqueAggregatorTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
