load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "exponential_distribution_test",
    srcs = ["ExponentialDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.ExponentialDistributionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "oracle_distribution_test",
    srcs = ["OracleDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.OracleDistributionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch/distributions",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "uniform_distribution_test",
    srcs = ["UniformDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.UniformDistributionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
