load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "farm_fingerprinter_test",
    srcs = ["FarmFingerprinterTest.java"],
    test_class = "org.wfanet.anysketch.fingerprinters.FarmFingerprinterTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
