load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "distributions",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "//src/main/java/org/wfanet/anysketch/fingerprinters"
    ],
)
