java_binary(
    name = "hello_streaming_client",
    srcs = ["HelloStreamingClient.java"],
    main_class = "org.wfanet.examples.streaming.HelloStreamingClient",
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_java_grpc",
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_java_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//stub",
    ],
)

java_binary(
    name = "hello_streaming_server",
    srcs = ["HelloStreamingServer.java"],
    main_class = "org.wfanet.examples.streaming.HelloStreamingServer",
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_java_grpc",
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_java_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//stub",
    ],
)
