load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "hello_streaming_client",
    srcs = ["HelloStreamingClient.kt"],
    main_class = "org.wfanet.examples.streaming.HelloStreamingClientKt",
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_kt_jvm_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)

kt_jvm_binary(
    name = "hello_streaming_server",
    srcs = ["HelloStreamingServer.kt"],
    main_class = "org.wfanet.examples.streaming.HelloStreamingServerKt",
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_kt_jvm_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)
